######################################################
#           Project : HomeLinux                      #
#           Version : 1.1.0-dev                      #
#           Date    : 01/2016                        #
#           Licence : BSD                            #
#           Authors : Sebastien Valat                #
######################################################

Version 1.1.0-dev

 * Add hl jump
 * Add python wrapper to setup PYTHON_PATH automatically
 * Bugfix uninstall
 * Manage module default loading in hl env
 * Improve flag management
 * Helper tool to convert gentoo packages
 * More packages : QT4, X11, GDB, CGDB, valgrind, wine...

Version 1.0.0 (January 1, 2016)

 * First available version
 * Automatic download of sources
 * Automatic update of version DB
 * Package dependencies
 * Useflags
 * Package slots
 * Check host system package to not rebuild the whole tree if not necessary
 (can support multiple system if compatibility name list is provided).
 * Inheritance between prefix (Not yet finished)
 * Support of module
 * Build packages in parallel (experimental)