@@ -6,7 +6,7 @@
 	],
 	"inherit": "models/autotools",
 	"vfetcher": {
-		"mode": "http",
+		"mode": "ftp",
 		"url": "ftp://ftp.csx.cam.ac.uk/pub/software/programming/pcre/",
 		"regexp": "libpcre-([0-9]+\\.[0-9]+\\.?[0-9]*\\.?[0-9]*).(tar.bz2|tar.gz|tbz|tar.xz)"
 	},
