@@ -6,7 +6,7 @@
 	],
 	"inherit": "models/autotools",
 	"vfetcher": {
-		"mode": "http",
+		"mode": "ftp",
 		"url": "ftp://ftp.gnu.org/pub/gnu/ncurses/",
 		"regexp": "ncurses-([0-9]+\\.[0-9]+\\.?[0-9]*\\.?[0-9]*).(tar.bz2|tar.gz|tbz|tar.xz)"
 	},
