@@ -22,5 +22,19 @@
 		"port": 21,
 		"distfiles": "gentoo-distfiles/distfiles/"
 	},
+	"debian": {
+		"repos": [
+			"http://ftp2.fr.debian.org/debian/dists/jessie/main/",
+			"http://ftp2.fr.debian.org/debian/dists/jessie/contrib/",
+			"http://ftp2.fr.debian.org/debian/dists/jessie/non-free/"
+		]
+	},
+	"providers": [
+		"homelinux", 
+		"gentoo", 
+		"debian", 
+		"urls", 
+		"github"
+	],
 	"useGnuStow": false
 }
